--- a/css/styles.css
+++ b/css/styles.css
@@ -4,7 +4,7 @@
   }
   
   body {
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; 
+    font-family: Arial; 
     background: white;
   }
   
